# ChangeLog for dev-ruby/tilt
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tilt/ChangeLog,v 1.39 2015/04/26 18:29:44 graaff Exp $

  26 Apr 2015; Hans de Graaff <graaff@gentoo.org> tilt-1.4.1.ebuild:
  Skip the optional haml dependency since rails is no longer marked stable.

  02 Mar 2015; Manuel Rüger <mrueg@gentoo.org> -tilt-1.4.1-r1.ebuild:
  Remove old.

*tilt-2.0.1-r1 (19 Jan 2015)
*tilt-1.4.1-r2 (19 Jan 2015)

  19 Jan 2015; Hans de Graaff <graaff@gentoo.org> +tilt-1.4.1-r2.ebuild,
  -tilt-2.0.1.ebuild, +tilt-2.0.1-r1.ebuild:
  Move tilt 2.x in a separate slot since many packages depend explicitly on
  tilt 1.x.

  18 Nov 2014; Manuel Rüger <mrueg@gentoo.org>
  -files/tilt-1.3.2-thread_id.patch:
  Cleanup unused patches.

*tilt-2.0.1 (20 Aug 2014)

  20 Aug 2014; Hans de Graaff <graaff@gentoo.org> +tilt-2.0.1.ebuild:
  Version bump.

  12 Aug 2014; Anthony G. Basile <blueness@gentoo.org> tilt-1.4.1-r1.ebuild,
  tilt-1.4.1.ebuild:
  Keyword ~ppc and ~ppc64, bug #519170

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> tilt-1.3.3.ebuild,
  tilt-1.4.1-r1.ebuild, tilt-1.4.1.ebuild:
  Remove trailing '.' from DESCRIPTION.

*tilt-1.4.1-r1 (22 Apr 2014)

  22 Apr 2014; Hans de Graaff <graaff@gentoo.org> tilt-1.4.1.ebuild,
  +tilt-1.4.1-r1.ebuild:
  Create stable candidate without ruby21.

  20 Apr 2014; Hans de Graaff <graaff@gentoo.org> tilt-1.4.1.ebuild:
  Add ruby21. Avoid kramdown tests due to differences in quoting.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> tilt-1.3.3.ebuild,
  tilt-1.4.1.ebuild:
  Remove ree18 and ruby18 target. Remove virtual/ruby-test-unit.

  17 Nov 2013; Hans de Graaff <graaff@gentoo.org> tilt-1.4.1.ebuild:
  Add ruby20.

  08 Aug 2013; Markus Meier <maekke@gentoo.org> tilt-1.4.1.ebuild:
  add ~arm, bug #477648

*tilt-1.4.1 (21 Jul 2013)

  21 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +tilt-1.4.1.ebuild:
  Version bump
