@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tilt/tilt-1.4.1.ebuild,v 1.9 2015/04/26 18:29:44 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tilt/tilt-1.4.1.ebuild,v 1.11 2015/04/26 18:40:40 graaff Exp $
 
 EAPI=5
 
@@ -17,15 +17,14 @@ HOMEPAGE="http://github.com/rtomayko/tilt"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+KEYWORDS="~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
 
 ruby_add_bdepend "test? (
 	dev-ruby/bluecloth
 	dev-ruby/coffee-script
 	dev-ruby/erubis
-	dev-ruby/nokogiri
-	dev-ruby/radius )"
+	dev-ruby/nokogiri )"
 
 ruby_add_rdepend ">=dev-ruby/builder-2.0.0"
 
