@@ -8,13 +8,15 @@ DIST dialog-1.2-20150225.tgz 473318 SHA256 6844b13a7a1fea568a8d5bb3004e1af90888c
 EBUILD dialog-1.2.20140219.ebuild 1433 SHA256 50f6569eca10e026d6addfe41ad480a6c14e8888f3a181e63fdca79f6bd6653f SHA512 3de60a780e3b794829d714336b7c2b360597e505b7e58fe785dbb1b09c879619615252d42e690d6ba577af061329a966b59b0f98cbe8ff1f28f34295cabaf36a WHIRLPOOL 822104746ca0e4c3b242fbf9898059a21da4a401b0bfba3c553ee66cc50203ca30d67a4d23ccc864ea6cee278f3f6da42cb2c5c890f9b167d2b3730ede61f5c1
 EBUILD dialog-1.2.20140911.ebuild 1434 SHA256 d32a4746f72eda849a20aa09912cf40beadfe775b2f94f84a740be21c31c0c1e SHA512 0587de98d0548d1aa60a64740d97dd0ddaabf739c5a7542d42e05b0b77d08402836867ded64d98c346c8abaf9cd8f586fed9e724d7df8ae77c566652ea791cd6 WHIRLPOOL 7e629a86b5b2dbdab64f14aac175adca4057f9113e6a63f575ac41b8e41cb6f59e39f0fb05713643c7f1819544ce1706b74f3da353ce94198ccc1cc25b7bc375
 EBUILD dialog-1.2.20150125.ebuild 1442 SHA256 d5c79cabc4cecfebc7a6faa3ee30582355561d66c777350c612c26d7f9c9f870 SHA512 4a5776af1effed6bf74ec14c4ead58d7ea92a6bd3e9d4b6791157f80918c7fec249ede4dfef864d2e7fd6e2bd72488e62ca5dfe300cb96e17058aaa5aaef571c WHIRLPOOL 0b7659a34dee116f87f19dfe92853fe9c8a9b072cf1a574415fdc7a884599ddc0b4766c5ee6d45ae9fd5d428901c515c4b028738c524018569cbe396a23cb29a
-EBUILD dialog-1.2.20150225.ebuild 1442 SHA256 8865a539be369651eafb9dba58d125b2f8a31c4fa6c908163c25215802ccf70d SHA512 ea9886d7b5893e2c5cbb8c3d799ff3871f1f5cbf09dba3c9b57924e00c67a75526af26b1582bc34722d370dc0ef28487a9a412568818f880aca5c8297b74b3f9 WHIRLPOOL d44e84ac0a39a2dd5d09dcd644ad335a6cc3620557a66c843abfb6766200e425b79fcd97862148c9bffc72786b0b9dc0ec411a1e419cef050930a9d796aa0e94
-MISC ChangeLog 29821 SHA256 00ed4bb18cd4bd5a9bab2140197e3f7dcd715eef50928c0abec8b76048a84db2 SHA512 7255441c1328f5f2f19450c33c6b9535bd4e50a145f4cc3788b511b723724683dc1faf060e2bfc0f10f4d68bd9a09a3c7b6b7bbf40ef0f4f8da40ed30fd57d13 WHIRLPOOL 1ec68406b3114a6f941c75cc1eadb3588dade4687f72fb794f907ec1547da59636ea941d6db7f20ffc1edca6cabb29e754ff9ea4d000c92dd3481fa4914134f4
+EBUILD dialog-1.2.20150225.ebuild 1443 SHA256 4edfa6d6f259c85ccb62d41bffff66decbe173c41d672af958fe5ed14b575c90 SHA512 e2e108cdca03e4338bc1ba0146ec321b3f269bb5c3f4ccbb449758f0d46bc0753c14c249d67e8bc4904ef04eb054e1bf4baaabc0c11dccb24fb30bed30adb922 WHIRLPOOL c4e885c3d7db2320b334d8a5a361e4f1eb51869ea8b85bacf1a40ab809ce35b7ae95f95b192b4b46509a75c7493bf94444d85eda6d2585ce84ee6aeb24764098
+MISC ChangeLog 29933 SHA256 825209755048e239bda93bee3b17a81e13c9d698a73add4b403e7d02fd174911 SHA512 4e5182ef89f0f96cb2c2cd6147df9d11f68778a902e92ad859fb39217aa5e1517a7657901ac65d0dd24049cac268e452bd4165652c318e2a3e856561540b5206 WHIRLPOOL cf7edf50d1d1a4f1e9576604983917e9ce7472b4fa24f7098f3f665911816c2e17c597e667b1261da75292dad3ec80709c22f217d8b578bedf26ba141cffc303
 MISC metadata.xml 251 SHA256 f842d1d78c5ed9053d1950eac622d8ac9959eac325d053853db5e34b4c7f7cef SHA512 77489d4f810fbcf87c48942ed05e96324e7c37f9cc5d4de1394b7e63005e9406b8c9cb475ef3ad4e02a013e6605a9b1c2daa58821cd0d70f4a2541e5018f7655 WHIRLPOOL 7be4a3a49cdfb2f4d716996155bca66255682b7a1485824bd3645143a00b0bb6b86ebb0ee6edac4ae22f06aac87edc94a260279337b8302e7153289e8cb5700a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlU9G0IACgkQCaWpQKGI+9TXXwCfVraMlnkDYZLFBOiJxGe1jw0y
-ZdoAn1g9VMQxemYbyEeQ+J/TAjtk/YVH
-=80Nn
+iJwEAQEIAAYFAlU9LsAACgkQG9wOWsQutdaDJwQAjhYrczZzbMQ6h0jUx0EWNEIC
+AepyMSCsjk3bljd5IPhzT64HOF7AT1mZuixbhD8EC6F9/mC4Jf+WlA+nubDGtM43
+fQXJfYnsrPB1C1r/8uhx3Gt01p8amyKpvBrvsDrHjdiGYqXOwV9CBE8RZFz0b/1F
+fZJX02JUiJGY62eFE8E=
+=npXU
 -----END PGP SIGNATURE-----
