@@ -4,10 +4,10 @@ DESCRIPTION=tool to display dialog boxes from a shell
 EAPI=5
 HOMEPAGE=http://invisible-island.net/dialog/dialog.html
 IUSE=examples minimal nls static-libs unicode
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
+KEYWORDS=~alpha amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=>=sys-libs/ncurses-5.2-r5[unicode?]
 SLOT=0
 SRC_URI=ftp://invisible-island.net/dialog/dialog-1.2-20150225.tgz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=3e99bdc1d0bfc8508a029986bcdf57b6
+_md5_=3612e871b8cdfd0df07fff0b49e91874
