@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/tilt
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tilt/ChangeLog,v 1.39 2015/04/26 18:29:44 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tilt/ChangeLog,v 1.41 2015/04/26 18:40:40 graaff Exp $
+
+  26 Apr 2015; Hans de Graaff <graaff@gentoo.org> tilt-1.4.1.ebuild:
+  Also drop optional radius dependency since it will bring in rails further
+  down.
+
+  26 Apr 2015; Hans de Graaff <graaff@gentoo.org> tilt-1.4.1.ebuild:
+  Revert accidental stable amd64 keyword.
 
   26 Apr 2015; Hans de Graaff <graaff@gentoo.org> tilt-1.4.1.ebuild:
   Skip the optional haml dependency since rails is no longer marked stable.
